@@ -26,7 +26,7 @@ return {
 		idleautoheal = 5,
 		idletime = 1800,
 		maxdamage = 3360,
-		maxvelocity = 3.2200000286102,
+		maxvelocity = 2.737,
 		minwaterdepth = 12,
 		movementclass = "BOAT4",
 		name = "Enforcer",
@@ -34,7 +34,7 @@ return {
 		objectname = "CORROY",
 		seismicsignature = 0,
 		selfdestructas = "BIG_UNIT",
-		sightdistance = 550,
+		sightdistance = 490,
 		sonardistance = 400,
 		turnrate = 193,
 		waterline = 3.5,
